; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_btrfs.c_grub_btrfs_uuid.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_btrfs.c_grub_btrfs_uuid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.grub_btrfs_data = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@grub_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"%04x%04x-%04x-%04x-%04x-%04x%04x%04x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i8**)* @grub_btrfs_uuid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_btrfs_uuid(%struct.TYPE_5__* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca %struct.grub_btrfs_data*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8** %1, i8*** %5, align 8
  %7 = load i8**, i8*** %5, align 8
  store i8* null, i8** %7, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.grub_btrfs_data* @grub_btrfs_mount(i32 %10)
  store %struct.grub_btrfs_data* %11, %struct.grub_btrfs_data** %6, align 8
  %12 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %13 = icmp ne %struct.grub_btrfs_data* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @grub_errno, align 4
  store i32 %15, i32* %3, align 4
  br label %78

16:                                               ; preds = %2
  %17 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %18 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @grub_be_to_cpu16(i32 %22)
  %24 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %25 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @grub_be_to_cpu16(i32 %29)
  %31 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %32 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 2
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @grub_be_to_cpu16(i32 %36)
  %38 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %39 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32*, i32** %40, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 3
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @grub_be_to_cpu16(i32 %43)
  %45 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %46 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  %48 = load i32*, i32** %47, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 4
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @grub_be_to_cpu16(i32 %50)
  %52 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %53 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %52, i32 0, i32 0
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 0
  %55 = load i32*, i32** %54, align 8
  %56 = getelementptr inbounds i32, i32* %55, i64 5
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @grub_be_to_cpu16(i32 %57)
  %59 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %60 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i32 0, i32 0
  %62 = load i32*, i32** %61, align 8
  %63 = getelementptr inbounds i32, i32* %62, i64 6
  %64 = load i32, i32* %63, align 4
  %65 = call i32 @grub_be_to_cpu16(i32 %64)
  %66 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %67 = getelementptr inbounds %struct.grub_btrfs_data, %struct.grub_btrfs_data* %66, i32 0, i32 0
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %67, i32 0, i32 0
  %69 = load i32*, i32** %68, align 8
  %70 = getelementptr inbounds i32, i32* %69, i64 7
  %71 = load i32, i32* %70, align 4
  %72 = call i32 @grub_be_to_cpu16(i32 %71)
  %73 = call i8* @grub_xasprintf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %23, i32 %30, i32 %37, i32 %44, i32 %51, i32 %58, i32 %65, i32 %72)
  %74 = load i8**, i8*** %5, align 8
  store i8* %73, i8** %74, align 8
  %75 = load %struct.grub_btrfs_data*, %struct.grub_btrfs_data** %6, align 8
  %76 = call i32 @grub_free(%struct.grub_btrfs_data* %75)
  %77 = load i32, i32* @grub_errno, align 4
  store i32 %77, i32* %3, align 4
  br label %78

78:                                               ; preds = %16, %14
  %79 = load i32, i32* %3, align 4
  ret i32 %79
}

declare dso_local %struct.grub_btrfs_data* @grub_btrfs_mount(i32) #1

declare dso_local i8* @grub_xasprintf(i8*, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @grub_be_to_cpu16(i32) #1

declare dso_local i32 @grub_free(%struct.grub_btrfs_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
